--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-LINK_GITHUB=
-LINK_GROUP=
-LINK_IG=
-NOWNER=
-NAMAOWNER=
-MODERATOR=
-PACKNAME=
-AUTHOR=
-THUMB_MENU=
-DONASI=
+LINK_GITHUB=https://github.com/misukar/CloudBot
+LINK_GROUP=-​
+LINK_IG=https://www.instagram.com/amrrfz
+NOWNER=08818507997
+NAMAOWNER=Fauzan
+MODERATOR=f
+PACKNAME=Mamang
+AUTHOR=Fauzan
+THUMB_MENU=MAMANK
+DONASI=08818507997
