--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ LINK_IG=https://www.instagram.com/amrrfz
 NOWNER=08818507997
 NAMAOWNER=Fauzan
 MODERATOR=f
-PACKNAME=Mamang
+PACKNAME=Mamangbot
 AUTHOR=Fauzan
 THUMB_MENU=MAMANK
 DONASI=08818507997
